test/tests/compiler/5_local_variables/valid/extra_credit/compound_bitwise_or.plx
pub fn main(none) i32 {
    to_or: i32 = 1
    to_or |= 30
    return to_or
}
