test/tests/compiler/5_local_variables/invalid_semantics/use_then_redefine.plx
pub fn main(none) i32 {
    a: i32 = 0
    return a
    a: i32 = 1
    return a
}
